--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest --watch",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "test": "jest",
     "test:ci": "jest --ci"
   },
   "dependencies": {
@@ -13,12 +15,20 @@
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.0.2",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
     "@types/react": "18.0.9",
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.9.1",
     "jest": "28.1.0",
-    "jest-environment-jsdom": "28.1.0",
-    "typescript": "4.6.4"
+    "jest-environment-jsdom": "28.1.0"
   }
 }
